--- a/index.html
+++ b/index.html
@@ -101,10 +101,10 @@
       box-shadow: 0 0 10px #00ffc3;
     }
 
-    .html { width: 90%; }
-    .css { width: 85%; }
-    .js { width: 75%; }
-    .python { width: 70%; }
+    .HTML { width: 70%; }
+    .CSS { width: 65%; }
+    .Microsoft { width: 95%; }
+    .C++ { width: 85%; }
 
     .contact {
       text-align: center;
@@ -172,7 +172,7 @@
   <div class="hero">
     <h1 class="glow">Hi, I'm <span class="name">MUHAMMAD ABDULLAH</span></h1>
     <p class="typewriter">Web Developer | Programmer | Designer</p>
-    <img src="IMG-20250424-WA0181.jpg" alt="Your Profile" class="profile-pic">
+    <img src="" alt="Your Profile" class="profile-pic">
   </div>
 
   <section class="card">
