--- a/index.html
+++ b/index.html
@@ -3,59 +3,61 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>My CV</title>
-  <!-- Linking the CSS file -->
+  <title>CV Muhammad Abdullah</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
+  <div class="hero">
+    <h1 class="glow">Hi, I'm <span class="name">MUHAMMAD ABDULLAH</span></h1>
+    <p class="typewriter">Web Developer | Programmer | Designer</p>
+    <img src="IMG-20250424-WA0181.jpg" alt="Your Profile" class="profile-pic">
+  </div>
 
-  <header>
-    <img src="your-image.jpg" alt="My Profile" class="profile-pic">
-    <h1>Your Full Name</h1>
-    <h2>Web Developer | Designer | Programmer</h2>
-  </header>
-
-  <section>
-    <div class="title">About Me</div>
-    <p class="info">Passionate developer with skills in HTML, CSS, JavaScript, and backend technologies. I enjoy building creative and responsive web applications.</p>
+  <section class="card">
+    <h2>About Me</h2>
+    <p>Creative developer with a passion for clean code, strong UI/UX, and performance-driven websites.</p>
   </section>
 
-  <section>
-    <div class="title">Education</div>
-    <p class="info">B.Sc in Computer Science - XYZ University (2020 - 2024)</p>
-    <p class="info">High School - ABC School (2018 - 2020)</p>
+  <section class="card">
+    <h2>Education</h2>
+    <ul>
+      <li>BS Computer Science - SIR SYED CASE University (2024 - 2028)</li>
+      <li>FSC (PRE-ENGINEERING) - HITEC School AND COLLEGE (2021 - 2023)</li>
+      <li>MATRIC - HITEC SCHOOL AND COLLEGE (2019 - 2021)</li>
+    </ul>
   </section>
 
-  <section>
-    <div class="title">Skills</div>
-    <p class="info">HTML, CSS, JavaScript, React, Node.js, C++, Python, Git, Figma, MySQL</p>
+  <section class="card">
+    <h2>Skills</h2>
+    <div class="skill-bar"><span>HTML</span><div class="bar html"></div></div>
+    <div class="skill-bar"><span>CSS</span><div class="bar css"></div></div>
+    <div class="skill-bar"><span>JavaScript</span><div class="bar js"></div></div>
+    <div class="skill-bar"><span>Python</span><div class="bar python"></div></div>
   </section>
 
-  <section>
-    <div class="title">Experience</div>
-    <p class="info"><strong>Frontend Developer</strong> at TechCorp (2024 - Present)</p>
-    <p class="info">Intern at WebWorks (Summer 2023)</p>
+  <section class="card">
+    <h2>Projects</h2>
+    <p>- Portfolio Website</p>
+    <p>- Library Management System</p>
+    <p>- Weather Forecast App</p>
   </section>
 
-  <section>
-    <div class="title">Projects</div>
-    <p class="info">- Personal Portfolio Website</p>
-    <p class="info">- Library Management System (C++)</p>
-    <p class="info">- Weather App using JavaScript</p>
-  </section>
-
-  <section class="contact-box">
-    <div class="title">Contact Me</div>
-    <p>Email: yourname@email.com</p>
-    <p>Phone: +123-456-7890</p>
+  <section class="contact">
+    <h2>Contact Me</h2>
+    <p>Email: abdullahhere0812@gmail.com</p>
+    <p>Phone: +92 333 2209966</p>
     <p>LinkedIn: linkedin.com/in/yourname</p>
     <p>GitHub: github.com/yourusername</p>
-    <p>Address: Your City, Your Country</p>
   </section>
 
   <footer>
-    © 2025 Your Name. All rights reserved.
+    <p>&copy; 2025 MUHAMMAD ABDULLAH A PROFESSIONAL AI USER</p>
   </footer>
-
 </body>
+<script>
+  document.addEventListener('copy' , function(event) {
+    event.clipboardData.setData('text/plain' , 'Created By : Muhammad Abdullah');
+    event.preventDefault();
+});
+</script>
 </html>
